# typetable

./: .gitignore  Build-Project.ps1  BuildConfig.json  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
docs/: design-decisions.md  overhead.md  p0707-mapping.md  techniques.json
examples/: CMakeLists.txt  composition.cpp  interface.cpp  ordered.cpp  plain_struct.cpp  property.cpp  value.cpp
explorations/: counter_dispatch.cpp  sketches.cpp
include/ctp/: AccessSpecifiers.h  Concepts.h  DataFields.h  ForEach.h  Functions.h  Hierarchy.h  Metaclass.h  TypeTable.h  TypeTraits.h  ctp.h
src/: CMakeLists.txt  CompileTimePolymorphism.cpp
